--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,1 +1,29 @@
+version: 0.2
+
+env:
+  variables:
+      # BOTH VARIABLES ARE MANDATORY!!
+      TFVARS_COMMON: "dev-common.tfvars"
+      #TFVARS_CUSTOM: "dev-start-green.tfvars"
+      TFVARS_CUSTOM: "dev-canary.tfvars"
+      #TFVARS_CUSTOM: "dev-blue-only.tfvars"
+phases:
+  install:
+    commands:
+      - "cd /usr/bin"
+      - "curl -s -qL -o terraform.zip https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_linux_amd64.zip"    
+      - "unzip -o terraform.zip"
+      - cd -
+      - pwd
+  build:
+    commands:
+      - pwd
+      - ls -lart
+      - cd terraform/AOD.ECS.FarGate.Stack/1-main-module
+      - terraform init 
+      - if [ `terraform workspace list | grep dev| wc -l` -eq 0 ] ; then  echo "Dev not found" ; terraform workspace new dev;  else echo "Dev workspace found" ; fi
+      - terraform workspace select dev
+      - terraform init 
+      - terraform plan -out aod-iac-terraform -var-file=../../${TFVARS_COMMON} -var-file=../../${TFVARS_CUSTOM}
+      - terraform apply aod-iac-terraform
 
