--- a/src/WebUIApp/buildspec.yaml
+++ b/src/WebUIApp/buildspec.yaml
@@ -43,8 +43,8 @@ phases:
        - echo "hello" > /tmp/hello.txt
        - cd WebUIApp
        - docker build . -t ${AWS_ACCOUNT}.dkr.ecr.us-east-2.amazonaws.com/apm-aod2-dev-nike-ecr:$CODEBUILD_BUILD_NUMBER
-       #- docker build -f Dockerfile .. -t 173341415789.dkr.ecr.us-east-2.amazonaws.com/apm-aod2-dev-nike-ecr:$CODEBUILD_BUILD_NUMBER 
-       - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 173341415789.dkr.ecr.us-east-2.amazonaws.com
+       #- docker build -f Dockerfile .. -t ${AWS_ACCOUNT}.dkr.ecr.us-east-2.amazonaws.com/apm-aod2-dev-nike-ecr:$CODEBUILD_BUILD_NUMBER 
+       - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin ${AWS_ACCOUNT}.dkr.ecr.us-east-2.amazonaws.com
        - docker push ${AWS_ACCOUNT}.dkr.ecr.us-east-2.amazonaws.com/apm-aod2-dev-nike-ecr:$CODEBUILD_BUILD_NUMBER
   #post_build:
     #commands:
